--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<input id="photo" type="file">
+﻿<input id="photo" type="file">
 <div id="results"></div>
 <script>
   async function loaded(reader) {
