Adding header and example photos.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
-﻿<input id="photo" type="file">
-<div id="results"></div>
-<script>
-  async function loaded(reader) {
-      const response = await fetch('https://hf.space/embed/willdoss30/great_ape_id/+/api/predict/', {
-      method: "POST", body: JSON.stringify({ "data": [reader.result] }),
-      headers: { "Content-Type": "application/json" }
-    });
-    const json = await response.json();
-    const label = json['data'][0]['confidences'][0]['label'];
-    results.innerHTML = `<br/><img src="${reader.result}" width="300"> <p>${label}</p>`
-  }
-  function read() {
-    const reader = new FileReader();
-    reader.addEventListener('load', () => loaded(reader))
-    reader.readAsDataURL(photo.files[0]);
-  }
-  photo.addEventListener('input', read);
-</script>
+﻿<head>
+    <title>Great Ape ID</title>
+</head>
+
+<body>
+    <h1>Great Ape ID</h1>
+    <p>This machine learning model can distinguish between images of chimpanzees, gorillas and orangutans.</p>
+    <hr />
+
+    <input id="photo" type="file">
+    <div id="results"></div>
+    <script>
+        async function loaded(reader) {
+            const response = await fetch('https://hf.space/embed/willdoss30/great_ape_id/+/api/predict/', {
+                method: "POST", body: JSON.stringify({ "data": [reader.result] }),
+                headers: { "Content-Type": "application/json" }
+            });
+            const json = await response.json();
+            const label = json['data'][0]['confidences'][0]['label'];
+            results.innerHTML = `<br/><img src="${reader.result}" width="300"> <p>${label}</p>`
+        }
+        function read() {
+            const reader = new FileReader();
+            reader.addEventListener('load', () => loaded(reader))
+            reader.readAsDataURL(photo.files[0]);
+        }
+        photo.addEventListener('input', read);
+    </script>
+
+</body>
