--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 ﻿<head>
     <title>Great Ape ID</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 
 <body>
     <h1>Great Ape ID</h1>
-    <p>This machine learning model can distinguish between images of chimpanzees, gorillas and orangutans.</p>
+    <p>This machine learning model can distinguish between images of chimpanzees, gorillas and orangutans. 
+    Created using <a href="https://www.fast.ai/">fast.ai</a>.</p>
     <hr />
 
     <input id="photo" type="file">
