--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
     <title>Great Ape ID</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <style>
+        .header {
+            width: 200px;
+            height: auto;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Great Ape ID</h1>
-    <p>This machine learning model can distinguish between images of chimpanzees, gorillas and orangutans. 
-    Created using <a href="https://www.fast.ai/">fast.ai</a>.</p>
+    <img scr="/img/chimp.jpg class="header" alt="Chimpanzee">
+    <img scr="/img/gorilla.jpg class="header" alt="Gorilla">
+    <img scr="/img/orang.jpg class="header" alt="Orangutan">
+    <p>This machine learning model can distinguish between images of chimpanzees, gorillas and orangutans. Upload an image to try.</p>
+    <p>Created using <a href="https://www.fast.ai/">fast.ai</a>.</p>
     <hr />
 
     <input id="photo" type="file">
