Added border + fixed images

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
         .header {
             width: 200px;
             height: auto;
+            border: 2px solid black;
         }
     </style>
 </head>
 
 <body>
     <h1>Great Ape ID</h1>
-    <img scr="/img/chimp.jpg class="header" alt="Chimpanzee">
-    <img scr="/img/gorilla.jpg class="header" alt="Gorilla">
-    <img scr="/img/orang.jpg class="header" alt="Orangutan">
+    <img scr="img/chimp.jpg class="header" alt="Chimpanzee">
+    <img scr="img/gorilla.jpg class="header" alt="Gorilla">
+    <img scr="img/orang.jpg class="header" alt="Orangutan">
     <p>This machine learning model can distinguish between images of chimpanzees, gorillas and orangutans. Upload an image to try.</p>
     <p>Created using <a href="https://www.fast.ai/">fast.ai</a>.</p>
     <hr />
