--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <style>
-        .header {
+        img {
             width: 200px;
             height: auto;
             border: 2px solid black;
@@ -13,9 +13,9 @@
 
 <body>
     <h1>Great Ape ID</h1>
-    <img scr="img/chimp.jpg class="header" alt="Chimpanzee">
-    <img scr="img/gorilla.jpg class="header" alt="Gorilla">
-    <img scr="img/orang.jpg class="header" alt="Orangutan">
+    <img scr="/img/chimp.jpg alt="Chimpanzee">
+    <img scr="/img/gorilla.jpg  alt="Gorilla">
+    <img scr="/img/orang.jpg alt="Orangutan">
     <p>This machine learning model can distinguish between images of chimpanzees, gorillas and orangutans. Upload an image to try.</p>
     <p>Created using <a href="https://www.fast.ai/">fast.ai</a>.</p>
     <hr />
