Fixed quote in img tag

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <h1>Great Ape ID</h1>
-    <img scr="/img/chimp.jpg alt="Chimpanzee">
-    <img scr="/img/gorilla.jpg  alt="Gorilla">
-    <img scr="/img/orang.jpg alt="Orangutan">
+    <img scr="/img/chimp.jpg" alt="Chimpanzee">
+    <img scr="/img/gorilla.jpg"  alt="Gorilla">
+    <img scr="/img/orang.jpg" alt="Orangutan">
     <p>This machine learning model can distinguish between images of chimpanzees, gorillas and orangutans. Upload an image to try.</p>
     <p>Created using <a href="https://www.fast.ai/">fast.ai</a>.</p>
     <hr />
