Added css styles doc

--- a/index.html
+++ b/index.html
@@ -2,20 +2,14 @@
     <title>Great Ape ID</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <style>
-        img {
-            width: 200px;
-            height: auto;
-            border: 2px solid black;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <h1>Great Ape ID</h1>
-    <img scr="/img/chimp.jpg" alt="Chimpanzee">
-    <img scr="/img/gorilla.jpg"  alt="Gorilla">
-    <img scr="/img/orang.jpg" alt="Orangutan">
+    <img scr="img/chimp.jpg" alt="Chimpanzee">
+    <img scr="img/gorilla.jpg"  alt="Gorilla">
+    <img scr="img/orang.jpg" alt="Orangutan">
     <p>This machine learning model can distinguish between images of chimpanzees, gorillas and orangutans. Upload an image to try.</p>
     <p>Created using <a href="https://www.fast.ai/">fast.ai</a>.</p>
     <hr />
