--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 <body>
     <h1>Great Ape ID</h1>
-    <img scr="img/chimp.jpg" alt="Chimpanzee">
-    <img scr="img/gorilla.jpg"  alt="Gorilla">
-    <img scr="img/orang.jpg" alt="Orangutan">
+    <img src="images/chimp.jpg" alt="Chimpanzee">
+    <img src="images/gorilla.jpg"  alt="Gorilla">
+    <img src="images/orang.jpg" alt="Orangutan">
     <p>This machine learning model can distinguish between images of chimpanzees, gorillas and orangutans. Upload an image to try.</p>
     <p>Created using <a href="https://www.fast.ai/">fast.ai</a>.</p>
     <hr />
