--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="images/gorilla.jpg" alt="Gorilla">
     <img src="images/orang.jpg" alt="Orangutan">
     <p>This machine learning model can distinguish between images of chimpanzees, gorillas and orangutans. Upload an image to try.</p>
-    <p>Created using <a href="https://www.fast.ai/">fast.ai</a>.</p>
+    <p>Created using resources from <a href="https://www.fast.ai/">fast.ai</a>.</p>
     <hr />
 
     <input id="photo" type="file">
